ajustes de apanel

--- a/.env
+++ b/.env
@@ -14,13 +14,17 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-CI_ENVIRONMENT = development
+CI_ENVIRONMENT = production
 
+cache.storePath = '/tmp/enterprisesst_cache'
+
+#CI_ENVIRONMENT = production
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
 
- app.baseURL = 'http://localhost/cycloidmanagement/public/';
+app.baseURL = 'https://management.cycloidtalent.com/'
+'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -30,10 +34,10 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = localhost
+database.default.hostname = 127.0.0.1
 database.default.database = cycloidmanagement
-database.default.username = root
-database.default.password = 
+database.default.username = Admon
+database.default.password = Colombia2024
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
